feat(register): endpoint for register user book lending
