# app/Http/Controllers/Api/AuthController.php
@@ -3,15 +3,57 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Requests\Auth\ApiLoginRequest;
+use App\Http\Requests\Auth\ApiRegisterRequest;
 use App\Repositories\Auth\AuthRepository;
+use App\Repositories\User\UserRepository;
+use Illuminate\Support\Facades\DB;
 
 class AuthController extends BaseController
 {
+    /** for handling authenticated user */
     private AuthRepository $repo;
 
-    public function __construct(AuthRepository $repo)
+    /** for handling user data */
+    private UserRepository $userRepo;
+
+    public function __construct(AuthRepository $repo, UserRepository $userRepo)
     {
         $this->repo = $repo;
+        $this->userRepo = $userRepo;
+    }
+
+    /**
+     * @OA\Post(
+     *  path="/register",
+     *  summary="Register a new user",
+     *  tags={"Authentication"},
+     *  description="Register a new user",
+     *
+     *  @OA\RequestBody(
+     *
+     *      @OA\JsonContent(ref="#/components/schemas/RegisterUser")
+     *  ),
+     *
+     *  @OA\Response(
+     *      response=200,
+     *      description="successful operation",
+     *  )
+     * )
+     */
+    public function register(ApiRegisterRequest $request)
+    {
+        $input = $request->validated();
+
+        DB::beginTransaction();
+        try {
+            $data = $this->userRepo->create($input);
+            DB::commit();
+
+            return $this->sendResponse($data, __('messages.auth.register_success'));
+        } catch (\Exception $e) {
+            DB::rollBack();
+        }
+
     }
 
     /**
@@ -34,7 +76,6 @@ class AuthController extends BaseController
      */
     public function login(ApiLoginRequest $request)
     {
-        $inputRequest = $request;
         $input = $request->validated();
 
         $checkIsLogin = $this->repo->doLogin($input['email'], $input['password']);
