# routes/api.php
@@ -3,4 +3,5 @@
 use App\Http\Controllers\Api\AuthController;
 use Illuminate\Support\Facades\Route;
 
+Route::post('register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
